--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^5.4.10"
   },
   "author": "Tev and Brandon",
-  "license": "ISC"
-
+  "license": "ISC",
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1"
+  }
 }
