--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Tev and Brandon",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "@emailjs/browser": "^4.4.1"
   }
 }
